<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nick"
            android:textSize="24dp"
            android:textColor="#444"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nick"
            android:hint="@string/nick_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/ipaddress"
            android:textSize="24dp"
            android:textColor="#444"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ipaddress"
            android:hint="@string/ipaddress_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."/>
        <TextView
            android:text="@string/port"
            android:textSize="24dp"
            android:textColor="#444"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/port"
            android:hint="@string/port_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>
    <Button
        android:id="@+id/connect_button"
        android:text="@string/connect"
        android:onClick="connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>